--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,20 +14,34 @@
     <string name="ceres">Ceres</string>
     <string name="dwarfs">Dwarfs</string>
     <string name="check_out">Choose the body you\'d like to check out</string>
-    <string name="sun_rundown">Largest, and most massive object within our solar system, containing 99.8% of overall mass, \nOfficially classified as a yellow dwarf, the Sun is a comparatively small star
-    \nThe oldest body in our solar system at 4.6 billion years old</string>
     <string name="learn_more">Learn more</string>
-    <string name="endedSunMissionCount">14 missions ended, including 1 failure</string>
-    <string name="ongoingSunMissionCount">7 missions ongoing</string>
     <string name="placeholder">placeholder</string>
+    <string name="ended_sun_mission_count">14 missions ended, including 1 failure</string>
+    <string name="ongoing_sun_mission_count">7 missions ongoing</string>
+    <string name="sun_rundown">Largest, and most massive object within our solar system, containing 99.8% of overall mass, \nOfficially classified as a yellow dwarf, the Sun is a comparatively small star
+        \nThe oldest body in our solar system at 4.6 billion years old</string>
     <string name="sizes_and_distances">Sizes and distances</string>
     <string name="sun_sizes_and_distances_text">The Sun has a radius of 695,508 kilometers(432,168.6 miles).
-    \nWhile our star isn\'t among the biggest around it\'s still very massive, 332,946 times more so than Earth.
-    \nIt\'s 150 million kilometers(93 million miles) away from earth, this distance serves as a basis for an Astronomical Unit(AU).
-    \nThe nearest interstellar neighbor of our solar system is Alpha Centauri, 4.37 light years away.</string>
-    <string name="orbitAndRotation">Orbit and rotation</string>
-    <string name="orbitAndRotationSunText">As a non-solid body different parts of The Sun rotate at different rates, at the equator one rotation takes 25 Earth days, at the poles that same action takes 36 days.
-    \nOur solar system is moving at 720,000 kilometers per hour(450,000 miles) per hour. Even at that speed it takes around 230 million years to make a full rotation around the Milky Way.</string>
-    <string name="interstellarDistanceMap">Interstellar distance map</string>
+        \nWhile our star isn\'t among the biggest around it\'s still very massive, 332,946 times more so than Earth.
+        \nIt\'s 150 million kilometers(93 million miles) away from earth.
+        \nThe nearest interstellar neighbor of our solar system is Alpha Centauri, 4.37 light years away.</string>
+    <string name="orbit_and_rotation">Orbit and rotation</string>
+    <string name="orbit_and_rotation_sun_text">As a non-solid body different parts of The Sun rotate at different rates, at the equator one rotation takes 25 Earth days, at the poles that same action takes 36 days.
+        \nOur solar system is moving at 720,000 kilometers per hour(450,000 miles per hour). Even at that speed it takes around 230 million years to make a full rotation around the Milky Way.</string>
+    <string name="interstellar_distance_map">Interstellar distance map</string>
+    <string name="history_of_the_body">History of the body</string>
+    <string name="history_of_the_sun_text">The Sun was formed alongside the rest of our solar system, around 4.5 billion years ago.
+        \nWhile forming it took over big majority of the material ending up with 99.8% of the entire combined mass of our solar system.
+        \nThe scientists calculated that our parent star should be around for another 6.5 billion years, ending up as a white dwarf.</string>
+    <string name="internal_structure">Internal structure</string>
+    <string name="internal_structure_of_the_sun">The Sun is composed mainly of two elements hydrogen (which takes up 91% of overall composition) and helium (which takes up 8.9%).
+        \It consists of six regions: the core, the radiative zone, and the convective zone in the interior,the surface (photosphere), the chromosphere and the corona.
+        \nThe temperature in the core reaches 15 million degrees C (27 million degrees F), high enough to sustain the process of nuclear fusion
+        \nThe temperature on the surface drops down to 5 500 degrees C (10 000 degrees F), while 3000 times smaller than the temperature of the core it\'s still enough to make carbon (like diamonds or graphite) boil.</string>
+    <string name="the_inside_of_the_sun">The inside of the sun</string>
+    <string name="atmosphere">Atmosphere</string>
+    <string name="atmosphere_of_the_sun">The atmosphere of our parent star is relatively thin, within that region are where we can find the sunspots and solar flairs.
+    \nWhat\'s interesting about that region is that the temperature once again rises up to 2 million degrees C (3.5 degrees F), the source of that heat remains unknown.</string>
+
 
 </resources>
