--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,98 +41,26 @@
     <string name="the_inside_of_the_sun">The inside of the sun</string>
     <string name="atmosphere">Atmosphere</string>
     <string name="atmosphere_of_the_sun">The atmosphere of our parent star is relatively thin, within that region are where we can find the sunspots and solar flairs.
-    \nWhat\'s interesting about that region is that the temperature once again rises up to 2 million degrees C (3.5 degrees F), the source of that heat remains unknown.</string>
-    <string name="large_text">
-        "Material is the metaphor.\n\n"
-
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
-
-        "Bold, graphic, intentional.\n\n"
-
-        "The foundational elements of print based design typography, grids, space, scale, color, "
-        "and use of imagery guide visual treatments. These elements do far more than please the "
-        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
-        "imagery, large scale typography, and intentional white space create a bold and graphic "
-        "interface that immerse the user in the experience.\n"
-        "An emphasis on user actions makes core functionality immediately apparent and provides "
-        "waypoints for the user.\n\n"
-
-        "Motion provides meaning.\n\n"
-
-        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
-        "inflection points that initiate motion, transforming the whole design.\n"
-        "All action takes place in a single environment. Objects are presented to the user without "
-        "breaking the continuity of experience even as they transform and reorganize.\n"
-        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
-        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
-
-        "3D world.\n\n"
-
-        "The material environment is a 3D space, which means all objects have x, y, and z "
-        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
-        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
-        "position along the z-axis and has a standard 1dp thickness.\n"
-        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
-        "emulated by manipulating the y-axis.\n\n"
-
-        "Light and shadow.\n\n"
-
-        "Within the material environment, virtual lights illuminate the scene. Key lights create "
-        "directional shadows, while ambient light creates soft shadows from all angles.\n"
-        "Shadows in the material environment are cast by these two light sources. In Android "
-        "development, shadows occur when light sources are blocked by sheets of material at "
-        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
-        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
-
-        "Resting elevation.\n\n"
-
-        "All material objects, regardless of size, have a resting elevation, or default elevation "
-        "that does not change. If an object changes elevation, it should return to its resting "
-        "elevation as soon as possible.\n\n"
-
-        "Component elevations.\n\n"
-
-        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
-        "does not vary from 6dp in one app to 16dp in another app).\n"
-        "Components may have different resting elevations across platforms, depending on the depth "
-        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
-
-        "Responsive elevation and dynamic elevation offsets.\n\n"
-
-        "Some component types have responsive elevation, meaning they change elevation in response "
-        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
-        "changes are consistently implemented using dynamic elevation offsets.\n"
-        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
-        "to the component’s resting state. They ensure that elevation changes are consistent "
-        "across actions and component types. For example, all components that lift on press have "
-        "the same elevation change relative to their resting elevation.\n"
-        "Once the input event is completed or cancelled, the component will return to its resting "
-        "elevation.\n\n"
-
-        "Avoiding elevation interference.\n\n"
-
-        "Components with responsive elevations may encounter other components as they move between "
-        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
-        "through other material, components avoid interfering with one another any number of ways, "
-        "whether on a per component basis or using the entire app layout.\n"
-        "On a component level, components can move or be removed before they cause interference. "
-        "For example, a floating action button (FAB) can disappear or move off screen before a "
-        "user picks up a card, or it can move if a snackbar appears.\n"
-        "On the layout level, design your app layout to minimize opportunities for interference. "
-        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
-        "when a user tries to pick up one of cards.\n\n"
-    </string>
+    \nWhat\'s interesting about that region is that the temperature once again rises up to 2 million degrees C (3.5 million degrees F), the source of that heat remains unknown.</string>
     <string name="ended_missions">Ended missions</string>
     <string name="ongoing_missions">Ongoing missions</string>
+    <string name="pioneer_program">Pioneer program</string>
+    <string name="pioneer_program_text">\n<b>Pioneer 5</b>
+    \n\nA spin-stabilized probe originally meant to study Venus with a flyby, after some launch complications the mission profile changed to observe the space in between the orbits of Venus and Earth,
+        active for just over 100 days Pioneer 5 has confirmed the existence of interplanetary magnetic fields among other accomplishments.
+    \n\n<b>Pioneer 6-9</b>
+    \n\nLaunched in the years of 1965-1968 they were, akin to their earlier sibling, a series of spin-stabilized probes that were meant to study The Sun and they did so with plenty of success.
+    The first of the series, 6, was successfully contacted in 2000, 7 was last contacted in 1995 wherein it was confirmed that one of its scientific instruments were still running,
+    8 in 1996, like the previous one, with one instrument functioning and finally 9 lost contact in 1983, in 1987 it was attempted to reconnect but the attempt failed and the spacecraft was declared inactive.
+    \n\n<b>Pioneer E</b>
+    \n\nPioneer E was supposed to be the fifth probe following the Pioneer 6-9 but due to a hydraulic failure the rocket was destroyed by range safety.</string>
+    <string name="helios_program">\nHelios program</string>
+    <string name="helios_program_text">\n<b>Helios 1</b>
+    \n\nThe probe was launched on 10th of November 1974 constructed in FRG(Federal Republic of Germany or West Germany) on US-built launch vehicles it was designed, same as its sibling, to observe solar wind,
+    magnetic fields and cosmic rays. The data from the probe was received in a German control center up until 1982.
+    \n\n<b>Helios 2</b>
+    \n\nThe probe launched on 15th of January 1976 it flew considerably closer to our parent star, 3 million kilometers (1.9 million miles) closer in fact. The probe gave us valuable insight to the solar plasma,
+    cosmic rays and cosmic dust until contact was lost in 1980 when the transmitter aboard the craft failed. The probe was shut down in 1982 to prevent any possible radio interference with future missions.</string>
 
 
 </resources>
