--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,7 +138,7 @@
     <string name="mercury_rundown">The planet closest to the Sun, orbiting it at around 0.4 AU. \nSecond hottest planet of the solar system.
         \nMercury orbits our parent star once every 88 Earth days</string>
     <string name="mercury_sizes_and_distances_text">Mercury has a radius of 2,440 kilometers(1,516 miles), a little over 1/3 of Earth\'s radius.
-        \nMercury\'s weight is only 6% of that of Earth, the density of the two planets are much close, with less than 0.1 grams per cubic centimeter.
+        \nMercury\'s weight is only 6% of that of Earth, the density of the two planets are much close, with less than 0.1 grams per cubic centimeter of difference.
         \nOn average Mercury is 77 million kilometers(48 million miles) away from Earth.
         \nThe distance between it and the sun varies between 47 million kilometers (29 million miles) and 70 million kilometers (43 million miles).</string>
     <string name="orbit_and_rotation_mercury_text">Being so close to the Sun and spinning around it so quickly Mercury takes 88 Earth days to get around its orbit, one Solar day takes 176 Earth days thanks to the slow rotation on its axis.
@@ -149,14 +149,144 @@
     <string name="internal_structure_of_mercury">Mercury has a large metallic core, the same as the other 3 rocky planets, that takes up about 85% of the planets radius.
         \nThere is evidence that it could be partly molten or fully liquid.
         \nThe surface of the planet, or the crust, is only 400 km (250 miles) thick.</string>
-    <string name="the_inside_of_mercury">The inside of the sun</string>
+    <string name="the_inside_of_mercury">The inside of mercury</string>
     <string name="atmosphere_of_mercury">Instead of an atmosphere Mercury has an exosphere, an area around a body where particles are bound to it gravitationally but not densely enough to be considered a gas.</string>
 
     <!-- STRINGS FOR ENDED MERCURY MISSIONS-->
-    
+
     <string name="mariner_10_title">Mariner 10</string>
-    <string name="mariner_10_text">Mariner 10 was the first spacecraft to research Mercury, the first mission to explore two planets (Mercury and Venus) in a single mission, the first to use a gravity assist to change its flight path, the first to make more than one pass on its target after initial encounter, and the first to use the solar wind as a major means of spacecraft orientation during flight.
+    <string name="mariner_10_text">\nMariner 10 was the first spacecraft to research Mercury, the first mission to explore two planets (Mercury and Venus) in a single mission, the first to use a gravity assist to change its flight path, the first to make more than one pass on its target after initial encounter, and the first to use the solar wind as a major means of spacecraft orientation during flight.
         \nIt showed that Mercury\'s surface looked much like our Moon\'s, with plenty of craters, as well as brought conclusive evidence of lack of atmosphere around the planet.
         \nLaunching on November 3rd 1973 the probe did 3 flybys of Mercury as well as a flyby of Venus, returning thousands of pictures of both (over 4000 of Venus and more than 2700 of Mercury).
         \nOn the closest approach to Mercury Mariner 10 was only 327 kilometers (200 miles) away from the surface. 8 days after that contact was lost for good, this would be the last probe to visit Mercury for 3 decades.</string>
+    <string name="messenger_title">\nMESSENGER</string>
+    <string name="messenger_text">\nMESSENGER (Mercury Surface, Space Environment, Geochemistry and Ranging), launched August 3rd 2004 was the first spacecraft to successfully orbit Mercury, it did so in 2011.
+        \nThe length of the trip was due to the propellant saving measures taken by the mission control, it consisted of using 1 Earth flyby, 2 Venus flybys and 3 Mercury flybys to nullify the acceleration resulting from getting closer to the Sun.
+        \nMESSENGER has returned over 100 000 pictures, including one of Earth and Moon, plenty of surface pictures of Mercury, photographs of 2 comets, as well as, probably the most impressive, a mosaic of our solar system with every planet visible, short of Uranus and Neptune.
+        \nThe spacecraft\'s mission ended in 2015 when it crashed into the surface of Mercury after it ran out of propellant to keep its orbit up, creating a new crater on the planet\'s surface.</string>
+
+    <!-- STRINGS FOR ONGOING MERCURY MISSIONS-->
+
+    <string name="bepicolombo">BepiColombo</string>
+    <string name="bepicolombo_text">BepiColombo, named after an Italian mathematician and engineer Professor Giuseppe (Bepi) Colombo (1920–1984) from the University of Padua, Italy. It is a joint mission between ESA and Japan
+        meant to study the composition, geophysics, atmosphere, magnetosphere and history of Mercury.
+        \nThe spacecraft launched on the 20th of October 2018, with the plan of 1 flyby of Earth, 2 flybys of Venus and 6 flybys of Mercury before inserting into an orbit around 2025 with official mission starting early in the following year.
+        \nThe latest milestone in October 2020 was the first successful flyby of Venus of the spacecraft.
+        \nThis mission is the first time ESA and Japan journey to Mercury, as well as the first Mercurial mission to consist of two separate orbiters meant to operate independently.</string>
+
+    <!-- STRINGS FOR THE DETAILS OF VENUS -->
+
+    <string name="ended_venus_mission_count">42 missions ended (including 19 failures)</string>
+    <string name="ongoing_venus_mission_count">2 missions ongoing</string>
+    <string name="venus_rundown">Second planet in our solar system, but the hottest of all, Venus is the brightest of any planet of our solar system.
+        \nIt has thick atmosphere full of gasses creating a greenhouse effect raising the temperature and pressure on the surface to the extreme
+        \nOne of two planets, the other being Uranus, to orbit the Sun in the opposite direction than every other planet in the system.</string>
+    <string name="venus_sizes_and_distances_text">With a radius of 6,052 kilometers (3,760 miles) Venus is only slightly smaller than Earth, by mere 300 kilometers.
+        \nThe average distance between it and the Sun is 108 million kilometers (67 million miles).</string>
+    <string name="orbit_and_rotation_venus_text">Venus has a reverse orbiting pattern when compared to the other planets, short of Uranus that also goes in the same direction, one full circle on the orbit takes around 225 Earth days.
+        \nThe rotation on its axis is going against the direction of its stellar orbit, making the Venusian day into one of the longest in our solar system, 117 Earth days for a full solar day to go by.
+        \nVenus orbits on the most circular orbit in our solar system, being a near perfect circle while every other body has more of an oval shaped orbit.
+        \nIts axial tilt is only 3 degrees meaning there are no seasons.</string>
+    <string name="history_of_venus_text">Venus is around 4.5 billion years old, forming alongside other bodies in our solar system.
+        \nOne of 5 planets visible with the naked eye Venus was known all the way in ancient times, with the written record from Babylon in 1600 BC describing appearances of the planet over the course of 21 years.
+        \nThe first observations with a telescope was done with Galileo in the 17th century. He discovered that Venus has phases similar to the Moon.</string>
+    <string name="internal_structure_of_venus">Venus, like other terrestrial planets, has a metallic core about 3200 km (2000 miles) thick with a liquid mantle above it.
+        \nThe surface of the planet is full of volcanoes, new ones being constantly produced through the thin, bulging surface of the planet.
+        \nVenus has plenty of valleys and mountains, the tallest of which (Maxwell Montes), is 8.8 kilometers high (20,000 feet).</string>
+    <string name="the_inside_of_venus">The inside of Venus</string>
+    <string name="atmosphere_of_venus">Venus\' atmosphere consists mainly of CO2, trapping the sunlight and heating up the surface of the planet to a scorching 470 degrees Celsius (880 degrees Fahrenheit).
+        \nAround 50 kilometers (20 miles) up the temperature drops to more or less what it is on the surface of Earth.
+        \nThe winds of the atmosphere are just as extreme, with the very top layer of clouds being carried as fast as 360 kilometers (224 miles) per hour, accompanied by lightning bolts.
+        \nThe pressure on the surface would be equivalent to being 1.6 kilometers (1 mile) underwater.</string>
+
+
+    <string name="large_text">
+        "Material is the metaphor.\n\n"
+
+        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
+        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
+        "technologically advanced and open to imagination and magic.\n"
+        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
+        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
+        "flexibility of the material creates new affordances that supercede those in the physical "
+        "world, without breaking the rules of physics.\n"
+        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
+        "interact, and exist in space and in relation to each other. Realistic lighting shows "
+        "seams, divides space, and indicates moving parts.\n\n"
+
+        "Bold, graphic, intentional.\n\n"
+
+        "The foundational elements of print based design typography, grids, space, scale, color, "
+        "and use of imagery guide visual treatments. These elements do far more than please the "
+        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
+        "imagery, large scale typography, and intentional white space create a bold and graphic "
+        "interface that immerse the user in the experience.\n"
+        "An emphasis on user actions makes core functionality immediately apparent and provides "
+        "waypoints for the user.\n\n"
+
+        "Motion provides meaning.\n\n"
+
+        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
+        "inflection points that initiate motion, transforming the whole design.\n"
+        "All action takes place in a single environment. Objects are presented to the user without "
+        "breaking the continuity of experience even as they transform and reorganize.\n"
+        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
+        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
+
+        "3D world.\n\n"
+
+        "The material environment is a 3D space, which means all objects have x, y, and z "
+        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
+        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
+        "position along the z-axis and has a standard 1dp thickness.\n"
+        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
+        "emulated by manipulating the y-axis.\n\n"
+
+        "Light and shadow.\n\n"
+
+        "Within the material environment, virtual lights illuminate the scene. Key lights create "
+        "directional shadows, while ambient light creates soft shadows from all angles.\n"
+        "Shadows in the material environment are cast by these two light sources. In Android "
+        "development, shadows occur when light sources are blocked by sheets of material at "
+        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
+        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
+
+        "Resting elevation.\n\n"
+
+        "All material objects, regardless of size, have a resting elevation, or default elevation "
+        "that does not change. If an object changes elevation, it should return to its resting "
+        "elevation as soon as possible.\n\n"
+
+        "Component elevations.\n\n"
+
+        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
+        "does not vary from 6dp in one app to 16dp in another app).\n"
+        "Components may have different resting elevations across platforms, depending on the depth "
+        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
+
+        "Responsive elevation and dynamic elevation offsets.\n\n"
+
+        "Some component types have responsive elevation, meaning they change elevation in response "
+        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
+        "changes are consistently implemented using dynamic elevation offsets.\n"
+        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
+        "to the component’s resting state. They ensure that elevation changes are consistent "
+        "across actions and component types. For example, all components that lift on press have "
+        "the same elevation change relative to their resting elevation.\n"
+        "Once the input event is completed or cancelled, the component will return to its resting "
+        "elevation.\n\n"
+
+        "Avoiding elevation interference.\n\n"
+
+        "Components with responsive elevations may encounter other components as they move between "
+        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
+        "through other material, components avoid interfering with one another any number of ways, "
+        "whether on a per component basis or using the entire app layout.\n"
+        "On a component level, components can move or be removed before they cause interference. "
+        "For example, a floating action button (FAB) can disappear or move off screen before a "
+        "user picks up a card, or it can move if a snackbar appears.\n"
+        "On the layout level, design your app layout to minimize opportunities for interference. "
+        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
+        "when a user tries to pick up one of cards.\n\n"
+    </string>
 </resources>
